<resources>
    <string name="app_name">AutoRecorder</string>
    <string name="setting_title">Settings</string>
    <string name="rate_app_title">Rate Me</string>
    <string name="share_title">Tell a Friend</string>
    <string name="all_recordings_title">All Recordings</string>
    <string name="incoming_title">Incoming</string>
    <string name="outgoing_title">Outgoing</string>
    <string name="by_contact_title">By Contact</string>
    <string name="close_app">Exit</string>
    <string name="action_recording_text">Recording…</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="general_settings">General</string>
    <string name="recording_settings">Recording</string>
    <string name="recording_directory">Recording Directory</string>
    <string name="audio_source">Audio Source</string>
    <string name="recording_duration_hint">Records shorter than this duration in seconds will be deleted. Select 0 to disable.</string>
    <string name="select_source">Select Source</string>
    <string name="audio_format">Audio Format</string>
    <string name="select_audio_format">Select Audio Format</string>
    <string name="min_rec_duration">Delete short recordings</string>
    <string name="ok">OK</string>
    <string name="new_dir">New Folder</string>
    <string name="wrong_dir">You don\'t have permission to write files in this directory</string>
    <string name="create_dir_title">Create Directory</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="ask_for_pin">Ask for PIN</string>
    <string name="ask_for_pin_summary">Protect Your Records From Other</string>
    <string name="access_granted">Access Granted</string>
    <string name="repeat_pass">Repeat PIN</string>
    <string name="enter_pass">New PIN</string>
    <string name="pin_not_match">PINs do not match</string>
    <string name="grant_access_message">You need to grant access to</string>
    <string name="use_internal_player">Internal Media Player</string>
    <string name="use_internal_player_summary">Use built-in player to play records</string>
    <string name="select_player">Select Player</string>
    <string name="no_player">There is no media player in the system. Turn on internal player in general settings.</string>
    <string name="cloud_services">Cloud Services</string>
    <string name="google_drive">Google Drive</string>
    <string name="min_duration_dialog">Choose min duration</string>
    <string name="ask_to_save_record">Ask before saving record</string>
    <string name="ask_to_save_record_summary">Ask whether to keep or delete recording after each call</string>
    <string name="save_record_dialog_title">Save this record</string>
    <string name="permission_sd_card">SD Card</string>
    <string name="permission_read_contacts">Read Contacts</string>
    <string name="permision_record_audio">Record Audio</string>
    <string name="permission_read_phone_state">Read Phone State</string>
    <string name="delete_older_than_days">Delete records older than</string>
    <string name="delete_older_than_days_summary">Select 0 to disable</string>
    <string name="days">days</string>
    <string name="excluded_numbers">Excluded Numbers</string>
    <string name="excluded_numbers_summary">Add numbers that will be ignored while recording is enabled</string>
    <string name="enter_number_to_exclude">Enter number to exclude</string>
    <string name="add_text">Add</string>
    <string name="number_alredy_in_list">Number alredy in list</string>
    <string name="included_numbers">Included numbers</string>
    <string name="included_numbers_summary">Calls from or to numbers in this list will be always recorded,  except numbers in excluded list</string>
    <string name="company_logo">Company Logo</string>
    <string name="company_name">MoskovDroid</string>

    <string name="banner_ad_unit_id">/6499/example/banner</string>
</resources>
