<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:title="@string/recording_directory"
        android:key="app_save_path"/>

    <SwitchPreference
        android:title="@string/ask_to_save_record"
        android:key="ask_to_save"
        android:summary="@string/ask_to_save_record_summary"
        android:defaultValue="false"/>

    <ListPreference
        android:key="audio_source"
        android:title="@string/audio_source"
        android:dialogTitle="@string/select_source"
        android:entries="@array/pref_audio_source_type"
        android:entryValues="@array/values_source_type"
        android:defaultValue="1"
        android:summary="%s"/>

    <ListPreference
        android:key="audio_format"
        android:title="@string/audio_format"
        android:dialogTitle="@string/select_audio_format"
        android:entries="@array/pref_audio_source_format"
        android:entryValues="@array/values_source_format"
        android:defaultValue="1"
        android:summary="%s"/>

    <ListPreference
        android:key="record_duration"
        android:title="@string/min_rec_duration"
        android:dialogTitle="@string/min_duration_dialog"
        android:entries="@array/pref_audio_duration"
        android:entryValues="@array/pref_audio_duration"
        android:defaultValue="0"
        android:summary="@string/recording_duration_hint"/>
</PreferenceScreen>